Fix Modal Error
Solves the issue with modal form's backdrop being above the modal itself.. Added fixes to modal not showing sometimes

--- a/BlazorServer/wwwroot/css/site.css
+++ b/BlazorServer/wwwroot/css/site.css
@@ -136,6 +136,10 @@ app {
     top: 0.5rem;
 }
 
+.modal-backdrop {
+    z-index: -1;
+}
+
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
         display: none;
